# costco-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
src/costco_mcp_server/: api.py  auth.py  auth_browser.py  product_cache.py  server.py
